  - Option for preventing emulated drive directory modifications
    ("--mount-changes no")
- AVI file recording:
  - video can be stored as BMP or as PNG images
  - audio is stored as 16 bits stereo PCM.
- Statusbar shows CPU type & speed
- Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
  from the GUI in addition to DD & SD images
- Major debugger improvements:
  - TAB-completion for debugger commands, command arguments and
    symbol names. Requires readline library
  - "parse" command and --parse Hatari command line option to
    execute debugger commands from a file
  - "stateload" and "statesave" commands for memory snapshots
  - "trace" command for tracing what the emulated code does
    - GEMDOS tracing gives slightly more information
  - "symbols" command for loading and listing CPU & DSP code & data
    symbols/addresses.  Code symbols are shown on CPU & DSP disassembly
    and code & data symbols can be used in breakpoints
  - "evaluate" command for doing calculations. Register and symbol
    names in expressions are replaced by their values. '$' will be
    TAB-completed to last 'evaluate' command result
  - "cd" command to change Hatari work directory
  - "exec" command to execute shell commands (ENABLE_SYSTEM_DEBUG_CALL)
  - "info" command for showing Atari HW and OS information
  - "lock" command for setting what information is shown every time on
    entering the debugger, e.g. disassembly or memdump from given address.
    "regaddr" argument does that from address pointed by given register
  - improved register name handling + fixed DSP reg name matching
  - if both sides of conditional breakpoint condition are identical, replace
    right side with current value of given expression (e.g. if it's "d0",
    use current D0 value).  If the comparison is for inequality ("!"),
    output the value & break only when the value changes from the previous
    value (not original like with other comparisons).  Symbols support