@@ -57,6 +57,8 @@ Emulator:
 - Statusbar shows CPU type & speed
 - Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
   from the GUI in addition to DD & SD images
+- Tracing for BIOS, XBIOS, GEMDOS and VDI traps gives in addition
+  to the opcode, also the name of the corresponding OS function
 - Major debugger improvements:
   - TAB-completion for debugger commands, command arguments and
     symbol names. Requires readline library
@@ -64,7 +66,6 @@ Emulator:
     execute debugger commands from a file
   - "stateload" and "statesave" commands for memory snapshots
   - "trace" command for tracing what the emulated code does
-    - GEMDOS tracing gives slightly more information
   - "symbols" command for loading and listing CPU & DSP code & data
     symbols/addresses.  Code symbols are shown on CPU & DSP disassembly
     and code & data symbols can be used in breakpoints
